# Virtual-Assistant-AI

./: LICENSE  README.md
backend/: .env  .gitignore  Cargo.toml
backend/src/: config.rs  main.rs
backend/src/models/: event.rs  user.rs
backend/src/routes/: auth_routes.rs  calendar_routes.rs  chat_routes.rs  event_routes.rs  mod.rs  protected_routes.rs  task_routes.rs
backend/src/services/: controllers.rs  database_service.rs  google_calendar_service.rs  mod.rs  openai_service.rs
backend/src/utils/: constants.rs  error_handlers.rs  mod.rs
frontend/: package-lock.json  package.json
frontend/app/: globals.css  home.css  layout.tsx  page.tsx
frontend/app/(pages)/ai/: page.tsx
frontend/app/(pages)/dashboard/: page.tsx
frontend/app/api/chat/: route.ts
frontend/components/: chat-input.tsx  chat-messages.tsx  chat.css  chat.tsx  logout-button.css  logout-button.tsx  navbar.css  navbar.tsx
frontend/components/ui/: button.css  button.tsx
